--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -2,7 +2,7 @@
   .p-4{
     .container{
       .row{
-        .col-md-3{
+        .col-lg-3{
           .card{
             border-radius: 10px;
             border: none !important;
